--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,9 @@ jobs:
                     sort | xargs cat > /tmp/CIRCLECI_CACHE_KEY
       - restore_cache:
           key: cache-{{ checksum "/tmp/CIRCLECI_CACHE_KEY" }}
+        # run all the tests!
       - run:
-          command: mvn verify
+          command: mvn -Dtest=Calculadora* test
       - store_test_results:
           path: target/surefire-reports
       - save_cache:
@@ -38,3 +39,5 @@ workflows:
     # - deploy:
     #     requires:
     #       - test-java
+
+    
